refact: alter names signin and signup

--- a/assets/html/signin.html
+++ b/assets/html/signin.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../css/singin.css" />
+    <link rel="stylesheet" href="../css/signin.css" />
     <title>Singin</title>
   </head>
   <body>
@@ -39,13 +39,13 @@
 
         <p>
           Não tem uma conta?
-          <a href="./singup.html">
+          <a href="./signup.html">
             Cadastre-se
           </a>
         </p>
       </div>
     </div>
 
-    <script src="../js/singin.js"></script>
+    <script src="../js/signin.js"></script>
   </body>
 </html>
