--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../css/singup.css" />
+    <link rel="stylesheet" href="../css/signup.css" />
     <title>Singup</title>
   </head>
   <body>
@@ -49,6 +49,6 @@
       </div>
     </div>
 
-    <script src="../js/singup.js"></script>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
